kubernetes/main/apps/kyverno/secret-sync-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sync-gateway-secret
  annotations:
    policies.kyverno.io/title: Sync Gateway Secret
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Secret
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      This policy syncs the wildcard certificate to the gateway namespace.
spec:
  rules:
    - name: sync-wildcard-cert-to-gateway
      match:
        any:
          - resources:
              kinds:
                - Secret
              operations:
                - CREATE
                - UPDATE
              names:
                - prod-cert-zerossl
              namespaces:
                - cert-manager
      generate:
        apiVersion: v1
        kind: Secret
        name: prod-cert-zerossl
        namespace: gateway
        generateExisting: true
        synchronize: true
        clone:
          namespace: cert-manager
          name: prod-cert-zerossl
